hangman image too short - fix try #2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,10 +111,11 @@ nav a {
 	height:100%;
 	border: 0 none;
 	opacity: .8;
+	min-height: 100%;
 }
 .work a {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 }
 .work h3 {
 	border-bottom: 0;
